fixed height to vectormap, added navbar aligned with map

--- a/public/Style/main.css
+++ b/public/Style/main.css
@@ -1,156 +1,32 @@
-/* Other */
-.padding-0{
-    padding-right:0;
-    padding-left:0;
-}
-/* Worldmap */
-#map{
-    margin-left: 0;
-    margin-right: 0;
-    width: 100%; 
+#wrapper{
     height: 600px;
+    width: 100%;
+
 }
-#world-map{
-    height: calc(100% - 52px);
+#wrapper > * {
+    padding-left: 0;
+    padding-right: 0;
+    margin-bottom: 0;
 }
-/* Navbar */
-#navbar {
-    overflow: hidden;
-    background-color: #333131;
-    font-family: "Verdana", Geneva, sans-serif;
+
+#menu{
+
 }
-#navbar a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
-#navbar a:hover {
-    background-color: #ddd;
-    color: black;
-}
-#navbar a.active {
-    background-color: #2c2a2a;
-    color: white;
-    font-weight: bold;
-}
-#navbar i{
-    color:white;
-}
-/* Map assets */
-.jvectormap-zoomin{
-    top: 40px;
-    height: 16px;
-    width: 16px;
-    line-height: 17px;
-    font-size: 22px;
-    background-color: #2c2a2a;
-    margin-left: 1%;
-}
-.jvectormap-zoomout{
-    top:75px;
-    height: 16px;
-    width: 16px;
-    line-height: 17px;
-    font-size: 22px;
-     background-color: #2c2a2a;
-     margin-left: 1%;
-}
-.jvectormap-legend{
-    background-color: transparent !important;
+
+#menu .navbar{
     margin: 0;
+    border-radius: 0;
 }
- .jvectormap-legend-cnt-v{
-    left: 0;
-    margin-top: 42%;
-    margin-left: 7%;
-    transform: scale(1.1, 1.1);
-} 
-.jvectormap-legend-title{
-    text-align: left;
-    padding-bottom: 5px;
+
+#map{
+    height: 100%;
 }
-/* Infobox */
+
+.jvectormap-container{
+    height: calc(600px - 62px);
+}
+
+
 #infobox {
-    text-align: center;
-    vertical-align: middle;
     background-color: #2c2a2a;
-    color: white;
-    font-family: "Verdana", Geneva, sans-serif;
-    height: 100%; 
-}
-/* Infobox header */
-#flag{
-    height: 5em; 
-    width: 5em;
-    padding-top: 110px;
-    margin-bottom: -10px;
-}
-.flag-icon:before {
-    content: none !important;
-}
-#country {
-    font-weight: bold;
-    padding-bottom: 20px;
-    margin: 0; 
-    padding-left: 15px;
-    font-size: 25px;
-    text-align: center;
-}
-/* Infobox stats */
-#country-data{
-    background-color: #333131;
-    height: 140px;
-}
-#columnWeapon{
-    text-align: left;
-    font-weight: bold;
-    padding-bottom: 10px;
-}
-#columnGPI {
-    text-align: left;
-    font-weight: bold;
-}
-#data-column{
-      padding-top: 40px;
-}
-.columnInfo{
-    float:right;
-    padding-top:5px;
- }
-img{
-    padding-right: 10px;
-}
-/* Infobox textarea */
-#info-field{
-    word-wrap: break-word;
-    padding:15px;
-}
-#info{
-    height: 190px;
-    padding-top: 10px;
-    padding-bottom: 50px;
-    overflow:hidden;
-    text-overflow: ellipsis;
-    content: "";
-    background: -webkit-linear-gradient(top,#fff 80%, #333131);
-   -webkit-background-clip: text;
-   -webkit-text-fill-color: transparent;
-}
-/* Infobox button */
-.buttonInfo {
-    background-color: #333131;
-    color: white;
-    width: 150px;
-    height: 40px;
-    border: 2px solid #FFFFFF !important;
-}
-.buttonInfo:hover {
-    background-color: #808080;
-}
-.readMore{
-    padding-bottom: 5px;
 }
